Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
0.4.15-dev-5722-g95a64cb https://github.com/reactos/reactos/commit/95a64cbdd2dab47c38cb3be48a753e9213e7be15
Description
This is a regression introduced within the last 2 months in recent 0.4.15-dev-master.
Most likely by some IME commit from katayama_hirofumi_mz.
err:(dll/win32/imm32/candidate.c:403) Out of boundary
|
It is logged during the setup already many times, but also when booting to the desktop afterwards. Impossible to miss that.
0.4.15-dev-5728-g2284aa6_IMM_Out_of_boundary_LogSpam.log![]()