[IMM32] Silence 'Out of boundary' log-spam

CORE-18852